# lox-lang-rs

./: .gitignore  Cargo.toml  log.txt
lox-lang/src/: main.rs
lox-lang/src/scanner/: mod.rs  source_traverser.rs
src/: lox.rs  main.rs  utils.rs
src/scanner/: scanner.rs
tree-builder/: Cargo.toml
tree-builder/src/: lib.rs
tree-builder/tree-builder-macro/src/: lib.rs
tree-builder/tree-builder-macro/src/parser/: parser_ast.rs  parsing.rs
