[package]
name = "lox-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
rustyline = "11.0.0"
phf = { version = "0.11", features = ["macros"] }
tree-builder = {path = "../tree-builder"}